--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,5 @@
 @import "tailwindcss";
 @plugin "daisyui";
 @plugin "daisyui" {
-  themes:
-    light, dark, synthwave, dracula;
+  themes: light, dark, synthwave, dracula;
 }
